vcs/specs/parser/fail/statements/invalid_compound_assign.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, assignment, compound, error
// @description: Test invalid compound assignment operator
// @expected-error: E047

fn test() {
    let x = 5;
    x +== 5;
}
